fix: headlines and spacing

--- a/_sass/utilities/_text.scss
+++ b/_sass/utilities/_text.scss
@@ -93,18 +93,18 @@
   text-underline-offset: 4px;
 }
 
-.font-weight-regular {
+.font-regular {
   font-weight: var(--font-regular);
 }
 
-.font-weight-medium {
+.font-medium {
   font-weight: var(--font-medium);
 }
 
-.font-weight-semibold {
+.font-semibold {
   font-weight: var(--font-semibold);
 }
 
-.font-weight-bold {
+.font-bold {
   font-weight: var(--font-bold);
 }
